--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,11 @@ matrix:
     - python: 3.6
       env: TOXENV=py36
 
-install: pip install tox
+install:
+  - pip install -r requirements.txt
 
-script: tox
+script:
+  - pytest
 
 notifications:
   email: false
