--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,8 +1,7 @@
 # Include the README
 include *.md
+recursive-include ecapy *
 
 # Include the license file
 include LICENSE.txt
 
-# Include the data files
-recursive-include data *
