--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,6 @@ envlist = py{27,34,35,36}
 
 [testenv]
 basepython =
-    py27: python2.7
     py34: python3.4
     py35: python3.5
     py36: python3.6
@@ -30,5 +29,5 @@ commands =
     flake8 .
     py.test tests
 [flake8]
-exclude = .tox,*.egg,build,data
+exclude = .tox,*.egg,build
 select = E,W,F
